--- a/mercadolivre/requirements.txt
+++ b/mercadolivre/requirements.txt
@@ -1,52 +1,11 @@
-appdirs==1.4.4
 asgiref==3.3.4
-backcall==0.2.0
-bcrypt==3.2.0
-certifi==2021.5.30
-cffi==1.14.5
-chardet==4.0.0
-click==6.7
-colorama==0.4.4
-configparser==5.0.2
-coverage==3.6
-crayons==0.4.0
-cursor==1.1.0
-decorator==5.0.9
-distlib==0.3.2
 Django==3.2.4
-django-tempus-dominus==5.1.2.14
-django-widget-tweaks==1.4.8
-Faker==8.8.0
-filelock==3.0.12
-idna==2.10
-ipykernel==5.5.5
-ipython==7.24.1
-ipython-genutils==0.2.0
-jedi==0.18.0
-jupyter-client==6.1.12
-jupyter-core==4.7.1
-matplotlib-inline==0.1.2
+djangorestframework==3.12.4
+Faker==8.7.0
+mysql==0.0.3
 mysqlclient==2.0.3
-parso==0.8.2
-pickleshare==0.7.5
-Pillow==8.3.1
-prompt-toolkit==3.0.18
-pycparser==2.20
-Pygments==2.9.0
 python-dateutil==2.8.1
 pytz==2021.1
-pywin32==301
-PyYAML==5.4.1
-pyzmq==22.1.0
-requests==2.25.1
-selenium==3.141.0
 six==1.16.0
 sqlparse==0.4.1
-tempus==1.1.0
 text-unidecode==1.3
-tornado==6.1
-traitlets==5.0.5
-urllib3==1.26.5
-virtualenv==20.4.7
-wcwidth==0.2.5
-webdriver-manager==3.4.2
