--- a/mercadolivre/requirements.txt
+++ b/mercadolivre/requirements.txt
@@ -1,9 +1,10 @@
 asgiref==3.3.4
 Django==3.2.4
+django-widget-tweaks==1.4.8
 djangorestframework==3.12.4
 Faker==8.7.0
-mysql==0.0.3
 mysqlclient==2.0.3
+Pillow==8.3.1
 python-dateutil==2.8.1
 pytz==2021.1
 six==1.16.0
