--- a/mercadolivre/requirements.txt
+++ b/mercadolivre/requirements.txt
@@ -1,14 +1,23 @@
 asgiref==3.3.4
+attrs==21.2.0
 Django==3.2.4
 django-widget-tweaks==1.4.8
 djangorestframework==3.12.4
 Faker==8.7.0
+iniconfig==1.1.1
 mysqlclient==2.0.3
+packaging==21.0
 Pillow==8.3.1
+pluggy==0.13.1
+py==1.10.0
+pyparsing==2.4.7
+pytest==6.2.4
+pytest-django==4.4.0
 python-dateutil==2.8.1
 pytz==2021.1
 selenium==3.141.0
 six==1.16.0
 sqlparse==0.4.1
 text-unidecode==1.3
+toml==0.10.2
 urllib3==1.26.6
