--- a/mercadolivre/requirements.txt
+++ b/mercadolivre/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.3.4
 attrs==21.2.0
+autopep8==1.5.7
 Django==3.2.4
 django-widget-tweaks==1.4.8
 djangorestframework==3.12.4
@@ -10,6 +11,7 @@ packaging==21.0
 Pillow==8.3.1
 pluggy==0.13.1
 py==1.10.0
+pycodestyle==2.7.0
 pyparsing==2.4.7
 pytest==6.2.4
 pytest-django==4.4.0
