--- a/mercadolivre/docker-compose.yml
+++ b/mercadolivre/docker-compose.yml
@@ -4,9 +4,8 @@ services:
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
     restart: always
-    # tty: true
     volumes:
-      - ./mysql:/var/lib/mysql
+      # - ./mysql:/var/lib/mysql
     environment:
       - MYSQL_ROOT_PASSWORD=toor
       - MYSQL_DATABASE=ml_db
